fix(decision): handling message with delete info from subscription service